--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,18 +33,27 @@
 
     <main class="imgfondo centrar">
       <h3>INICIO</h3>
-      <div class="grillaFotos animacionFotos">
-        <a href="otros/tops.html">
-          <img src="assets/tops.jpeg" alt="Tops" class="imagenes"/>
-        </a>
-        <a href="otros/jeans.html">
-          <img src="assets/jeans.jpeg" alt="Jeans" class="imagenes"/>
-        </a>
-        <a href="otros/vestidos.html">
-          <img src="assets/vestidos.jpeg" alt="Vestidos" class="imagenes"/>
-        </a>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <a href="otros/tops.html">
+              <img src="assets/tops.jpeg" alt="Tops" class="imagenes"/>
+            </a>
+          </div>
+          <div class="col">
+            <a href="otros/jeans.html">
+              <img src="assets/jeans.jpeg" alt="Jeans" class="imagenes"/>
+            </a>
+          </div>
+          <div class="col">
+            <a href="otros/vestidos.html">
+              <img src="assets/vestidos.jpeg" alt="Vestidos" class="imagenes"/>
+            </a>
+          </div>
+        </div>
       </div>
     </main>
+
 
     <footer class="colorhf animacionHF">
       <article>
@@ -68,7 +78,6 @@
         <div>Instagram: divaclothing.ar</div>
       </article>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
-
