--- a/otros/iniciarsesion.html
+++ b/otros/iniciarsesion.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,20 +35,26 @@
     <main class="imgfondo">
         <div>Inicio / Iniciar Sesión</div>
         <h3 class="centrar">INICIO DE SESIÓN</h3>
-        <form action="" method="get" enctype="text/plain">
-            <fieldset>
-                <legend>Iniciar sesión</legend>
-                <div>
-                    <label for="userMail">Email</label>
-                    <input type="email" id="userMail" name="userName">
-                </div>
-                <div>
-                    <label for="userPassword">Contraseña</label>
-                    <input type="password" id="userPassword" name="userPassword">
-                </div>
-                <button type="submit">INICIAR SESIÓN</button>
-            </fieldset>
-        </form>
+        <div class="container">
+          <div class="row d-flex justify-content-center">
+            <form>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresar email">
+                <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tu correo electrónico con nadie más.</small>
+              </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1">Contraseña</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
+              </div>
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+              </div>
+              <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+            </form>
+          </div>
+        </div>
     </main>
 
     <footer class="colorhf animacionHF">
@@ -73,6 +80,6 @@
           <div>Instagram: divaclothing.ar</div>
         </article>
       </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
