--- a/otros/comocomprar.html
+++ b/otros/comocomprar.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body id="grilla">
 
     <header class="colorhf centrar">
       <div>
         <ul>
-          <li><a href="/otros/crearcuenta.html">Crear cuenta</a></li>
-          <li><a href="/otros/iniciarsesion.html">Iniciar sesión</a></li>
+          <li><a href="../otros/crearcuenta.html">Crear cuenta</a></li>
+          <li><a href="../otros/iniciarsesion.html">Iniciar sesión</a></li>
         </ul>
       </div>
 
@@ -23,9 +23,9 @@
 
       <div>
         <ul>  
-          <li><a href="/index.html">Inicio</a></li>
-          <li><a href="/otros/comocomprar.html">Cómo comprar</a></li>
-          <li><a href="/otros/contacto.html">Contacto</a></li>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="../otros/comocomprar.html">Cómo comprar</a></li>
+          <li><a href="../otros/contacto.html">Contacto</a></li>
         </ul>
       </div>
       
@@ -43,15 +43,15 @@
       <article>
         <b>MEDIOS DE PAGO</b>
         <div>
-          <img src="/assets/mc.jpeg" alt="Matercard" class="imagenes2" />
-          <img src="/assets/mp.jpeg" alt="MercadoPago" class="imagenes2" />
-          <img src="/assets/visa.jpeg" alt="Visa" class="imagenes2" />
-          <img src="/assets/efectivo.jpeg" alt="Efectivo" class="imagenes2" />
+          <img src="../assets/mc.jpeg" alt="Matercard" class="imagenes2" />
+          <img src="../assets/mp.jpeg" alt="MercadoPago" class="imagenes2" />
+          <img src="../assets/visa.jpeg" alt="Visa" class="imagenes2" />
+          <img src="../assets/efectivo.jpeg" alt="Efectivo" class="imagenes2" />
         </div>
         <b>MEDIOS DE ENVÍO</b>
         <div>
-            <img src="/assets/correoarg.jpeg" alt="Correo Argentino" class="imagenes2" />
-            <img src="/assets/envios.jpeg" alt="Envíos" class="imagenes2" />
+            <img src="../assets/correoarg.jpeg" alt="Correo Argentino" class="imagenes2" />
+            <img src="../assets/envios.jpeg" alt="Envíos" class="imagenes2" />
         </div>
       </article>
       <article class="contacto hijo">
