Segunda entrega del proyecto final

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main class="imgfondo centrar">
       <h3>INICIO</h3>
-      <div class="container">
+      <div class="container animacionFotos">
         <div class="row">
           <div class="col">
             <a href="otros/tops.html">
