--- a/otros/comocomprar.html
+++ b/otros/comocomprar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,9 +35,9 @@
     <main class="imgfondo">
         <div>Inicio / Cómo comprar</div>
         <h3 class="centrar">¿CÓMO COMPRAR?</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime explicabo repellendus quis quo quam nobis suscipit magni cumque? Quis iure quisquam libero porro, maxime atque doloremque labore nam dignissimos dolorem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem fugiat, aliquid nisi sunt soluta dolor culpa odit qui laboriosam et fuga corrupti excepturi facilis reiciendis aspernatur esse? Quam, iste voluptatem! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad unde esse fugiat dolore, molestias magni. Dolor exercitationem quam est fugit? Voluptatibus saepe ab voluptas, autem at facilis exercitationem beatae officiis!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eum voluptate assumenda distinctio, molestiae iure quia nisi porro blanditiis illo tempora iusto quam voluptatibus fugiat. Deserunt atque eos aperiam doloribus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod a ducimus et, excepturi saepe corrupti repellendus iusto dolorem, quia nulla accusamus minus perspiciatis ea illum sit debitis eveniet, laudantium alias!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quos quas pariatur commodi odio ipsum magnam voluptatem adipisci id vero corporis aspernatur aperiam, doloribus necessitatibus deleniti rerum, animi rem numquam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam debitis maiores commodi, rerum culpa amet reiciendis voluptates aliquam enim voluptas ut tempore distinctio, soluta doloribus velit deleniti perferendis possimus. Quis!</p>
+        <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime explicabo repellendus quis quo quam nobis suscipit magni cumque? Quis iure quisquam libero porro, maxime atque doloremque labore nam dignissimos dolorem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem fugiat, aliquid nisi sunt soluta dolor culpa odit qui laboriosam et fuga corrupti excepturi facilis reiciendis aspernatur esse? Quam, iste voluptatem! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad unde esse fugiat dolore, molestias magni. Dolor exercitationem quam est fugit? Voluptatibus saepe ab voluptas, autem at facilis exercitationem beatae officiis!</p>
+        <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eum voluptate assumenda distinctio, molestiae iure quia nisi porro blanditiis illo tempora iusto quam voluptatibus fugiat. Deserunt atque eos aperiam doloribus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod a ducimus et, excepturi saepe corrupti repellendus iusto dolorem, quia nulla accusamus minus perspiciatis ea illum sit debitis eveniet, laudantium alias!</p>
+        <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quos quas pariatur commodi odio ipsum magnam voluptatem adipisci id vero corporis aspernatur aperiam, doloribus necessitatibus deleniti rerum, animi rem numquam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam debitis maiores commodi, rerum culpa amet reiciendis voluptates aliquam enim voluptas ut tempore distinctio, soluta doloribus velit deleniti perferendis possimus. Quis!</p>
     </main>
 
     <footer class="colorhf animacionHF">
@@ -62,6 +63,6 @@
         <div>Instagram: divaclothing.ar</div>
       </article>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
