--- a/otros/contacto.html
+++ b/otros/contacto.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body id="grilla">
 
     <header class="colorhf centrar">
       <div>
         <ul>
-          <li><a href="/otros/crearcuenta.html">Crear cuenta</a></li>
-          <li><a href="/otros/iniciarsesion.html">Iniciar sesión</a></li>
+          <li><a href="../otros/crearcuenta.html">Crear cuenta</a></li>
+          <li><a href="../otros/iniciarsesion.html">Iniciar sesión</a></li>
         </ul>
       </div>
 
@@ -23,9 +24,9 @@
 
       <div>
         <ul>  
-          <li><a href="/index.html">Inicio</a></li>
-          <li><a href="/otros/comocomprar.html">Cómo comprar</a></li>
-          <li><a href="/otros/contacto.html">Contacto</a></li>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="../otros/comocomprar.html">Cómo comprar</a></li>
+          <li><a href="../otros/contacto.html">Contacto</a></li>
         </ul>
       </div>
       
@@ -34,39 +35,47 @@
     <main class="imgfondo">
         <div>Inicio / Contacto</div>
         <h3 class="centrar">¡CONTACTANOS!</h3>
-        <form action="" method="get" enctype="text/plain">
-            <fieldset>
-                <legend>Contacto</legend>
-                <div>
-                    <label for="userName">Nombre Completo</label>
-                    <input type="text" id="userName" name="userName">
+        <div class="container">
+          <div class="row d-flex justify-content-center">
+            <form>
+              <div class="row">
+                <div class="col">
+                  <label for="userName">Nombre</label>
+                  <input type="text" class="form-control" placeholder="Nombre">
                 </div>
-                <div>
-                    <label for="userMail">Email</label>
-                    <input type="email" id="userMail" name="userName">
+                <div class="col">
+                  <label for="userSurname">Apellido</label>
+                  <input type="text" class="form-control" placeholder="Apellido">
                 </div>
-                <div>
-                    <label for="userMessage">Mansaje</label>
-                    <textarea name="userMessage" id="userMessage" cols="30" rows="10"></textarea>
-                </div>
-                <button type="submit">ENVIAR</button>
-            </fieldset>
-        </form>
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresar email">
+                <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tu correo electrónico con nadie más.</small>
+              </div>
+              <div>
+                <label for="userMessage">Mansaje</label>
+                <textarea name="userMessage" id="userMessage" cols="30" rows="10"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+          </div>
+        </div>
     </main>
 
     <footer class="colorhf animacionHF">
         <article>
           <b>MEDIOS DE PAGO</b>
           <div>
-            <img src="/assets/mc.jpeg" alt="Matercard" class="imagenes2" />
-            <img src="/assets/mp.jpeg" alt="MercadoPago" class="imagenes2" />
-            <img src="/assets/visa.jpeg" alt="Visa" class="imagenes2" />
-            <img src="/assets/efectivo.jpeg" alt="Efectivo" class="imagenes2" />
+            <img src="../assets/mc.jpeg" alt="Matercard" class="imagenes2" />
+            <img src="../assets/mp.jpeg" alt="MercadoPago" class="imagenes2" />
+            <img src="../assets/visa.jpeg" alt="Visa" class="imagenes2" />
+            <img src="../assets/efectivo.jpeg" alt="Efectivo" class="imagenes2" />
           </div>
           <b>MEDIOS DE ENVÍO</b>
           <div>
-              <img src="/assets/correoarg.jpeg" alt="Correo Argentino" class="imagenes2" />
-              <img src="/assets/envios.jpeg" alt="Envíos" class="imagenes2" />
+              <img src="../assets/correoarg.jpeg" alt="Correo Argentino" class="imagenes2" />
+              <img src="../assets/envios.jpeg" alt="Envíos" class="imagenes2" />
           </div>
         </article>
         <article class="contacto hijo">
@@ -77,6 +86,6 @@
           <div>Instagram: divaclothing.ar</div>
         </article>
       </footer>
-
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
