--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DIVA</title>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="estilos/main.css" />
   </head>
   <body id="grilla">
     <header class="colorhf centrar">
@@ -69,7 +69,7 @@
             <img src="assets/envios.jpeg" alt="Envíos" class="imagenes2" />
         </div>
       </article>
-      <article class="contacto hijo">
+      <article class="contacto">
         <b>CONTACTO</b>
         <div>Teléfono: 3515160665</div>
         <div>Mail: diva@gmail.com</div>
