Aplicando SASS 2 Y SEO

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Este es un sitio web de indumentaria femenina en la cual podrás encontrar diferente variedad de ropa y estilos.">
+    <meta name="keywords" content="INDUMENTARIA, TOPS, JEANS, VESTIDOS">
     <title>DIVA</title>
     <link rel="stylesheet" href="estilos/main.css" />
   </head>
@@ -54,7 +56,7 @@
       </div>
     </main>
 
-    <footer class="colorhf animacionHF">
+    <footer class="colorhf animacionHF colorMeMp">
       <article>
         <b>MEDIOS DE PAGO</b>
         <div>
@@ -69,7 +71,7 @@
             <img src="assets/envios.jpeg" alt="Envíos" class="imagenes2" />
         </div>
       </article>
-      <article class="contacto">
+      <article class="contacto colorletra">
         <b>CONTACTO</b>
         <div>Teléfono: 3515160665</div>
         <div>Mail: diva@gmail.com</div>
