--- a/otros/contacto.html
+++ b/otros/contacto.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../estilos/estilos.css">
+    <meta name="description" content="En esta página podrás encontrar un formulario que te permite contactarte con nosotros.">
+    <meta name="keywords" content="DUDAS, CONSULTAS, CÓMO COMPRAR, FORMAS DE PAGO, ENVÍO">
+    <title>Contacto</title>
+    <link rel="stylesheet" href="../estilos/main.css">
 </head>
 <body id="grilla">
 
