--- a/otros/crearcuenta.html
+++ b/otros/crearcuenta.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../estilos/estilos.css">
+    <meta name="description" content="En esta página podrás encontrar un formulario que te permite crearte una cuenta.">
+    <meta name="keywords" content="CREAR CUENTA, INSCRIPCIÓN, DATOS">
+    <title>Crear cuenta</title>
+    <link rel="stylesheet" href="../estilos/main.css">
 </head>
 <body id="grilla">
       
