--- a/otros/iniciarsesion.html
+++ b/otros/iniciarsesion.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../estilos/estilos.css">
+    <meta name="description" content="En esta página podrás encontrar un formulario que te permite iniciar sesión.">
+    <meta name="keywords" content="INICIAR SESIÓN, DATOS">
+    <title>Iniciar sesión</title>
+    <link rel="stylesheet" href="../estilos/main.css">
 </head>
 <body id="grilla">
       
