--- a/otros/comocomprar.html
+++ b/otros/comocomprar.html
@@ -42,7 +42,7 @@
         <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quos quas pariatur commodi odio ipsum magnam voluptatem adipisci id vero corporis aspernatur aperiam, doloribus necessitatibus deleniti rerum, animi rem numquam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam debitis maiores commodi, rerum culpa amet reiciendis voluptates aliquam enim voluptas ut tempore distinctio, soluta doloribus velit deleniti perferendis possimus. Quis!</p>
     </main>
 
-    <footer class="colorhf animacionHF">
+    <footer class="colorhf animacionHF colorMeMp">
       <article>
         <b>MEDIOS DE PAGO</b>
         <div>
