--- a/otros/contacto.html
+++ b/otros/contacto.html
@@ -65,7 +65,7 @@
         </div>
     </main>
 
-    <footer class="colorhf animacionHF">
+    <footer class="colorhf animacionHF colorMeMp">
         <article>
           <b>MEDIOS DE PAGO</b>
           <div>
