--- a/otros/tops.html
+++ b/otros/tops.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta página podrás encontrar la amplia variedad de tops que ofrecemos.">
+    <meta name="keywords" content="TOPS, TOP CUT, TOP BASIC">
     <title>Tops</title>
     <link rel="stylesheet" href="../estilos/main.css">
 </head>
@@ -61,7 +63,7 @@
         </div>
     </main>
 
-    <footer class="colorhf animacionHF">
+    <footer class="colorhf animacionHF colorMeMp">
         <article>
           <b>MEDIOS DE PAGO</b>
           <div>
