--- a/otros/vestidos.html
+++ b/otros/vestidos.html
@@ -63,7 +63,7 @@
         </div>
       </main>
     
-    <footer class="colorhf animacionHF">
+    <footer class="colorhf animacionHF colorMeMp">
         <article>
           <b>MEDIOS DE PAGO</b>
           <div>
