--- a/otros/iniciarsesion.html
+++ b/otros/iniciarsesion.html
@@ -59,7 +59,7 @@
         </div>
     </main>
 
-    <footer class="colorhf animacionHF">
+    <footer class="colorhf animacionHF colorMeMp">
         <article>
           <b>MEDIOS DE PAGO</b>
           <div>
